users with token forwarded to /main. flickers a bit, maybe fix later. put scrollbars back in main

--- a/client/css/app.scss
+++ b/client/css/app.scss
@@ -5,7 +5,7 @@
 
 body {
   //prevents scrollbars appearing during slide animation
-  overflow: hidden;
+  //overflow: hidden;
 }
 
 textarea {
